[metadata]
name = rsarmageddon
version = 2.0.1
author = Vittorio Mignini <vittorio.mignini@gmail.com>, Simone Cimarelli <aquilairreale@ymail.com>
author_email = vittorio.mignini@gmail.com
description = RSA cryptography and cryptoanalysis toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m1gnus/RSArmageddon
project_urls =
    Bug Tracker = https://github.com/m1gnus/RSArmageddon/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Security :: Cryptography

[options]
packages = find:
package_dir =
    =.
python_requires = >=3.7
install_requires =
    colorama
    pycryptodome
    gmpy2
    psutil

[options.packages.find]
where = .
include = rsarmageddon*

[options.entry_points]
console_scripts =
    rsarmageddon=rsarmageddon:main

[options.package_data]
    * = *.sage

[options.exclude_package_data]
    * = *.sage.py
